--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
   </head>
   <body>
     <div id="app"></div>
-    <script>
-      if ("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("/service-worker.js");
-      }
-    </script>
+    <!--
+      NOTE: Service worker is disabled by default to avoid cache surprises.
+      If you're doing a PWA (Progressive Web App), you will want to enable this.
+
+      <script>
+        if ("serviceWorker" in navigator) {
+          navigator.serviceWorker.register("/service-worker.js");
+        }
+      </script> 
+    -->
   </body>
 </html>
